2008.10.11 Kentaro FUKUCHI <fukuchi@megaui.net>
	* autogen.sh:
	  - Darwin workaround.

2008.09.12 Kentaro FUKUCHI <fukuchi@megaui.net>
	* tests/view_qrcode.c:
	  - Unused variable 'pitch' has been removed from draw_QRcode().

2008.06.03 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Merged to the main trunk.

2008.06.01 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c:
	  - Now it does not show the full usage when unrecognized options are
	    given.
	  - When "--help" is given, it displays the long usage.
	* Version 3.0.3 has been released.

2008.05.26 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c, tests/view_qrcode.c:
	  - getopt_long_only() has been replaced with getopt_long() which is
	    widely available. (Thanks to Gavan Fantom)
	  - Now it accepts long options.
	* qrencode.1.in:
	  - followed the above changes.
	* Bumped version to 3.0.3.

2008.05.18 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrspec.c:
	  - The bit order of "Version information" has been corrected.
	    (Thanks to Paul Janssesn)
	* configure.ac, Makefile.am:
	  - The "--without-tests" has been added to the configure script.
	* qrencode.spec.in:
	  - Uses "--without-tests".
	* Version 3.0.2 has been released.

2008.05.14 Kentaro FUKUCHI <fukuchi@megaui.net>
	* various files:
	  - Some compile-time warnings/erros with g++ have been fixed.
	    (Thanks to wangsai)

2008.05.09 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrenc.c:
	  - Now qrencode writes an image file in binary mode for non-POSIX
	    platform, such as MS-Windows. (bug report from Paul Janssens)
	* Makefile.am:
	  - tests/test_all.sh has been added.
	* tests/test_all.sh:
	  - Now it exits immediately if any test fails.
	* Version 3.0.1 has been released.

2008.05.01 Kentaro FUKUCHI <fukuchi@megaui.net>
	* qrencode.spec.in:
	  - Added the man page to the files section.

2008.04.30 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Version 3.0.0 has been released.

2008.04.23 Kentaro FUKUCHI <fukuchi@megaui.net>
	* Version 3.0.0rc3 has been released.